--- a/scss/_profile.scss
+++ b/scss/_profile.scss
@@ -1116,7 +1116,7 @@
         margin-top: 8px;
         overflow: hidden;
         width: 105px;
-		z-index: 100;
+		z-index: 1;
 		border: 1px solid transparent;
 
         &:hover {
